--- a/TAP/Makefile
+++ b/TAP/Makefile
@@ -1,3 +1,11 @@
 all:
+	g++ F.cpp -o Fl
 	gcc F.c -o F
-	./F
+	echo "Danilo: "
+	./F < entrada
+	echo "Luiz: "
+	./Fl < entrada
+
+l:
+	g++ F.cpp -o Fl
+	./Fl
